--- a/eda.ipynb
+++ b/eda.ipynb
@@ -584,12 +584,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "Dul1eNbj3tIH",
-        "outputId": "9b27aaf1-043a-40e3-b3b3-9019dfd38a1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        }
+        },
+        "id": "Dul1eNbj3tIH",
+        "outputId": "9b27aaf1-043a-40e3-b3b3-9019dfd38a1a"
       },
       "execution_count": 60,
       "outputs": [
@@ -648,12 +648,12 @@
         "stocks.head()"
       ],
       "metadata": {
-        "id": "2Ue6BwQ75NHf",
-        "outputId": "0f5d206c-8d4b-4a40-9af2-e0a0e81b6165",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "2Ue6BwQ75NHf",
+        "outputId": "0f5d206c-8d4b-4a40-9af2-e0a0e81b6165"
       },
       "execution_count": 72,
       "outputs": [
@@ -985,11 +985,11 @@
         "stocks[\"Ticker_Symbol\"].unique()"
       ],
       "metadata": {
-        "id": "p2___1Kc4663",
-        "outputId": "9995d0e9-1ddd-4b66-ca62-cb4051743fb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p2___1Kc4663",
+        "outputId": "9995d0e9-1ddd-4b66-ca62-cb4051743fb0"
       },
       "execution_count": 68,
       "outputs": [
@@ -1051,12 +1051,12 @@
         "energy_consumption.head()"
       ],
       "metadata": {
-        "id": "dFnNX08F60qV",
-        "outputId": "f180e73d-d8cd-4844-dfcf-7528e9086453",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 310
-        }
+        },
+        "id": "dFnNX08F60qV",
+        "outputId": "f180e73d-d8cd-4844-dfcf-7528e9086453"
       },
       "execution_count": 75,
       "outputs": [
@@ -1422,6 +1422,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "energy_consumption[\"Description\"].unique()"
+      ],
+      "metadata": {
+        "id": "DREwIoD4_du9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "1mCkdyMeuiuo"
@@ -1432,13 +1443,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 123,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f2oZe1imuiuo",
-        "outputId": "91af4043-6fde-4cd7-b9db-835eb5daf7ed"
+        "outputId": "85028db1-2419-4bf8-89b5-9405ab36dcc6"
       },
       "outputs": [
         {
@@ -1455,7 +1466,8 @@
         "\n",
         "print(energy_emissions_path)\n",
         "\n",
-        "energy_emissions = pd.read_csv(energy_emissions_path)"
+        "energy_emissions = pd.read_csv(energy_emissions_path)\n",
+        "energy_emissions = energy_emissions[energy_emissions[\"Value\"] != \"Not Available\"]"
       ]
     },
     {
@@ -1464,12 +1476,12 @@
         "energy_emissions.head()"
       ],
       "metadata": {
-        "id": "88eTFx7D7FSx",
-        "outputId": "f8c6f70d-8e4c-4224-dc80-bb995ce0e09e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 310
-        }
+        },
+        "id": "88eTFx7D7FSx",
+        "outputId": "f8c6f70d-8e4c-4224-dc80-bb995ce0e09e"
       },
       "execution_count": 77,
       "outputs": [
@@ -1822,6 +1834,84 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "energy_emissions[\"Energy Type\"].unique(), energy_emissions[\"Energy Class\"].unique()"
+      ],
+      "metadata": {
+        "id": "fpOR9wFaBsJQ",
+        "outputId": "f6fd1909-61e9-411c-e600-590c0655d061",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array(['Coal', 'Natural Gas', 'Aviation Gasoline', 'Distillate Fuel Oil',\n",
+              "        'Hydrocarbon Gas Liquids (HGL)', 'Jet Fuel', 'Kerosene',\n",
+              "        'Lubricants', 'Motor Gasoline', 'Petroleum Coke',\n",
+              "        'Residual Fuel Oil', 'Other', 'Total', 'Electricity', 'Coal Coke',\n",
+              "        'Geothermal Energy', 'Non-Biomass Waste', 'Wood', 'Biomass Waste',\n",
+              "        'Fuel Ethanol', 'Biodiesel', 'Biomass'], dtype=object),\n",
+              " array(['Coal', 'Natural Gas', 'Petroleum', 'Total', 'Electricity',\n",
+              "        'Geothermal Energy', 'Non-Biomass Waste', 'Biomass'], dtype=object))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "energy_emissions[\"Value\"] = energy_emissions[\"Value\"].apply(lambda s: int(s.replace(\".\", \"\")))\n",
+        "\n",
+        "agg_emissions = (\n",
+        "    energy_emissions[energy_emissions[\"Value\"] != \"Not Available\"]\n",
+        "    .groupby([\"YYYYMM\", \"Energy Class\", \"Unit\", \"Sector\"])\n",
+        "    .agg(\"sum\").reset_index()\n",
+        "    [[\"YYYYMM\", \"Energy Class\", \"Unit\", \"Sector\", \"Value\"]]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "7fb_lm-qCP7K"
+      },
+      "execution_count": 124,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "agg_emissions[agg_emissions[\"Energy Class\"] == \"Total\"][\"Sector\"].unique()"
+      ],
+      "metadata": {
+        "id": "v8WixUx1ELxx",
+        "outputId": "e1c4040a-b9db-4406-9c12-dc1d082e7b54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Commercial', 'Electric Power', 'Industrial', 'Residential',\n",
+              "       'Transportation'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 126
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "w8Jg04BSuiuo"
@@ -1864,12 +1954,12 @@
         "imports_export.head()"
       ],
       "metadata": {
-        "id": "nrJeSyij9OKb",
-        "outputId": "1a0940e9-a899-4902-f0a1-07f1a78b4a92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "nrJeSyij9OKb",
+        "outputId": "1a0940e9-a899-4902-f0a1-07f1a78b4a92"
       },
       "execution_count": 84,
       "outputs": [
@@ -2264,12 +2354,12 @@
         "energy_production.head()"
       ],
       "metadata": {
-        "id": "Id_mU_4s9ess",
-        "outputId": "1e0598bf-b738-4ae3-d8e2-1b3849b2b636",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "Id_mU_4s9ess",
+        "outputId": "1e0598bf-b738-4ae3-d8e2-1b3849b2b636"
       },
       "execution_count": 86,
       "outputs": [
@@ -2639,12 +2729,12 @@
         "monthly_transportation.head()"
       ],
       "metadata": {
-        "id": "5I3yxLT48zKz",
-        "outputId": "2f5093bf-811f-491a-c650-10ad6f1b4e63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 533
-        }
+        },
+        "id": "5I3yxLT48zKz",
+        "outputId": "2f5093bf-811f-491a-c650-10ad6f1b4e63"
       },
       "execution_count": 81,
       "outputs": [
@@ -3205,12 +3295,12 @@
         "energy_stocks.head()"
       ],
       "metadata": {
-        "id": "znVPF7VX-MZe",
-        "outputId": "6d2f6217-ac20-42b2-fb6e-6680f755c038",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 310
-        }
+        },
+        "id": "znVPF7VX-MZe",
+        "outputId": "6d2f6217-ac20-42b2-fb6e-6680f755c038"
       },
       "execution_count": 88,
       "outputs": [
@@ -3611,12 +3701,12 @@
         "stock_descriptions.head()"
       ],
       "metadata": {
-        "id": "Tv5ZB2F_74bQ",
-        "outputId": "c49be1e7-40d4-44f6-cbd1-1d4141e806aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 293
-        }
+        },
+        "id": "Tv5ZB2F_74bQ",
+        "outputId": "c49be1e7-40d4-44f6-cbd1-1d4141e806aa"
       },
       "execution_count": 79,
       "outputs": [
