adding wti vol predict v2

--- a/wti_vol_predict.ipynb
+++ b/wti_vol_predict.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,26 +88,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Data\n",
     "\n",
     "# Consumption\n",
-    "petroleum_consumption_deseasonalized = pd.read_csv(\"data\\\\cleaned_data\\\\consumption_production\\\\petroleum_consumption_deseasonalized.csv\")\n",
+    "petroleum_consumption_deseasonalized = pd.read_csv(r\"data\\\\cleaned_data\\\\consumption_production\\\\petroleum_consumption_deseasonalized.csv\")\n",
     "#Production\n",
-    "crude_oil_production_deseasonalized = pd.read_csv(\"data\\\\cleaned_data\\\\consumption_production\\\\crude_oil_production_deseasonalized.csv\")\n",
+    "crude_oil_production_deseasonalized = pd.read_csv(r\"data\\\\cleaned_data\\\\consumption_production\\\\crude_oil_production_deseasonalized.csv\")\n",
     "\n",
     "# Futures\n",
-    "wti_futures_curves_diffs = pd.read_csv(\"data\\\\cleaned_data\\\\futures\\\\wti_futures_curves_diffs.csv\")\n",
+    "wti_futures_curves_diffs = pd.read_csv(r\"data\\cleaned_data\\futures\\wti_futures_diffs.csv\")\n",
     "\n",
     "\n",
     "\n",
     "# Stocks and Commodity Prices\n",
-    "log_geom_diff_wti_price = pd.read_csv(\"data\\\\cleaned_data\\\\stocks_commodities\\\\log_geom_diff_wti_price.csv\")\n",
-    "log_geom_diff_spy = pd.read_csv(\"data\\\\cleaned_data\\\\stocks_commodities\\\\SPY_log_geom_diff.csv\")\n",
-    "log_geom_diff_iye = pd.read_csv(\"data\\\\cleaned_data\\\\stocks_commodities\\\\IYE_log_geom_diff.csv\")\n",
+    "log_geom_diff_wti_price = pd.read_csv(r\"data\\\\cleaned_data\\\\prices\\\\log_geom_diff_wti_price.csv\")\n",
+    "log_geom_diff_spy = pd.read_csv(r\"data\\\\cleaned_data\\\\prices\\\\SPY_log_geom_diff.csv\")\n",
+    "log_geom_diff_iye = pd.read_csv(r\"data\\\\cleaned_data\\\\prices\\\\IYE_log_geom_diff.csv\")\n",
     "\n",
     "\n",
     "\n",
