Final very minor changes

--- a/oil_volatility_employment_analysis.ipynb
+++ b/oil_volatility_employment_analysis.ipynb
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "ecda5f03",
+   "id": "18ccd81b",
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58b2b14",
+   "id": "562f8cf9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "f250529d",
+   "id": "0d8ffc98",
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2901e89a",
+   "id": "a87342be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1770,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "251ef3e2",
+   "id": "9067dec8",
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1792,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "d3f838cb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1823,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "cedf91bb",
+   "id": "6ed188d3",
    "metadata": {},
    "outputs": [
     {
